# tosh

./: Cargo.toml  test.toml
.circleci/: config.yml
src/: config.rs  error.rs  main.rs
src/lib/: lexer.rs  lib.rs  tomlize.rs  trie.rs
