[package]
name = "tosh"
version = "0.1.0"
edition = "2021"


[lib]
name = "tosh"
path = "src/lib/lib.rs"

[[bin]]
name = "tosh"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22.1", features = ["event-stream"] }
dirs = "4.0.0"
logos = "0.12.0"
nix = "0.23.1"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook = "0.3.13"
tokio = { version = "1.15.0", features = ["full"] }
toml = "0.5.8"

[profile.release]
opt-level = "z"
lto = true
debug = false
