[package]
name = "tosh"
version = "0.1.0"
edition = "2021"


[lib]
name = "tosh"
path = "src/lib/lib.rs"

[[bin]]
name = "tosh"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.22.1" }
dirs = "4.0.0"
logos = "0.12.0"
nix = "0.23.1"
rs-complete = "1.3.0"
serde = { version = "1.0.136", features = ["derive"] }
signal-hook = "0.3.13"
toml = "0.5.8"

[profile.release]
opt-level = "z"
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"

