[package]
name = "tosh"
version = "0.3.1"
edition = "2021"


[lib]
name = "tosh"
path = "src/lib/lib.rs"

[[bin]]
name = "tosh"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.0"
dirs-next = "2.0.0"
logos = "0.12.0"
nix = "0.23.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.80"
signal-hook = "0.3.13"
toml = "0.5.8"
[profile.release]
opt-level = "z"
lto = true
debug = false
strip = true
codegen-units = 1
panic = "abort"
